feat: Implemented JWT based login system
